--- a/tests/devapps/WAM/NetCoreWinFormsWam/NetCoreWinFormsWAM.csproj
+++ b/tests/devapps/WAM/NetCoreWinFormsWam/NetCoreWinFormsWAM.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <!--<TargetFramework>net5.0-windows10.0.17763.0</TargetFramework>-->
-    <TargetFrameworks>net5.0-windows10.0.17763.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows10.0.17763.0;net6</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
@@ -12,7 +12,7 @@
     <ProjectReference Include="..\..\..\..\src\client\Microsoft.Identity.Client\Microsoft.Identity.Client.csproj" />
   </ItemGroup>
 
-  <ItemGroup Condition="$(TargetFramework) == 'netcoreapp3.1' ">
+  <ItemGroup Condition="$(TargetFramework) == 'net6' ">
     <ProjectReference Include="..\..\..\..\src\client\Microsoft.Identity.Client.Desktop\Microsoft.Identity.Client.Desktop.csproj" />
   </ItemGroup>
 
