--- a/src/client/Microsoft.Identity.Client/Microsoft.Identity.Client.csproj
+++ b/src/client/Microsoft.Identity.Client/Microsoft.Identity.Client.csproj
@@ -8,14 +8,14 @@
   </PropertyGroup>
 
   <!-- Mobile and legacy targets - comment these out or set env variable MSAL_DESKTOP_ONLY_DEV to speedup the build -->
-  <PropertyGroup Condition="'$(MSAL_DESKTOP_ONLY_DEV)' == ''">
+  <!--<PropertyGroup Condition="'$(MSAL_DESKTOP_ONLY_DEV)' == ''">
     <TargetFrameworkNetDesktop45>net45</TargetFrameworkNetDesktop45>
     <TargetFrameworkUap>uap10.0.17763</TargetFrameworkUap>
     <TargetFrameworkIos>Xamarin.iOS10</TargetFrameworkIos>
     <TargetFrameworkMac>xamarinmac20</TargetFrameworkMac>
     <TargetFrameworkAndroid9>MonoAndroid9.0</TargetFrameworkAndroid9>
     <TargetFrameworkAndroid10>MonoAndroid10.0</TargetFrameworkAndroid10>
-  </PropertyGroup>
+  </PropertyGroup>-->
 
     <!-- MAUI -->
   <PropertyGroup Condition="'$(MAUI_SUPPORT)' != ''">
