--- a/tests/Microsoft.Identity.Test.Android.UIAutomation/Microsoft.Identity.Test.Android.UIAutomation.csproj
+++ b/tests/Microsoft.Identity.Test.Android.UIAutomation/Microsoft.Identity.Test.Android.UIAutomation.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Lab.Api">
+      <Version>0.9.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
@@ -66,10 +69,6 @@
     <ProjectReference Include="..\Microsoft.Identity.Test.Core.UIAutomation\Microsoft.Identity.Test.UIAutomation.Infrastructure.csproj">
       <Project>{3DC6EC76-D350-4D43-B206-A4CEC8AA36D4}</Project>
       <Name>Microsoft.Identity.Test.UIAutomation.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Microsoft.Identity.Test.LabInfrastructure\Microsoft.Identity.Test.LabInfrastructure.csproj">
-      <Project>{a181778d-5917-41ce-aa5f-7daaa7b7f5bb}</Project>
-      <Name>Microsoft.Identity.Test.LabInfrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
