--- a/tests/Microsoft.Identity.Test.iOS.UIAutomation/Microsoft.Identity.Test.iOS.UIAutomation.csproj
+++ b/tests/Microsoft.Identity.Test.iOS.UIAutomation/Microsoft.Identity.Test.iOS.UIAutomation.csproj
@@ -38,6 +38,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Lab.Api">
+      <Version>0.9.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
@@ -67,10 +70,6 @@
     <ProjectReference Include="..\Microsoft.Identity.Test.Core.UIAutomation\Microsoft.Identity.Test.UIAutomation.Infrastructure.csproj">
       <Project>{3DC6EC76-D350-4D43-B206-A4CEC8AA36D4}</Project>
       <Name>Microsoft.Identity.Test.UIAutomation.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Microsoft.Identity.Test.LabInfrastructure\Microsoft.Identity.Test.LabInfrastructure.csproj">
-      <Project>{A181778D-5917-41CE-AA5F-7DAAA7B7F5BB}</Project>
-      <Name>Microsoft.Identity.Test.LabInfrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
