--- a/tests/devapps/DesktopTestApp/DesktopTestApp.csproj
+++ b/tests/devapps/DesktopTestApp/DesktopTestApp.csproj
@@ -120,6 +120,9 @@
     <PackageReference Include="Legacy2CPSWorkaround" Version="1.0.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Lab.Api">
+      <Version>0.9.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
@@ -128,10 +131,6 @@
     <ProjectReference Include="..\..\Microsoft.Identity.Test.Common\Microsoft.Identity.Test.Common.csproj">
       <Project>{18559d36-c735-4933-aa86-398c8222d4f6}</Project>
       <Name>Microsoft.Identity.Test.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Microsoft.Identity.Test.LabInfrastructure\Microsoft.Identity.Test.LabInfrastructure.csproj">
-      <Project>{a181778d-5917-41ce-aa5f-7daaa7b7f5bb}</Project>
-      <Name>Microsoft.Identity.Test.LabInfrastructure</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\src\client\Microsoft.Identity.Client\Microsoft.Identity.Client.csproj">
       <Project>{3433eb33-114a-4db7-bc57-14f17f55da3c}</Project>
