--- a/tests/Microsoft.Identity.Test.Integration.netfx/Microsoft.Identity.Test.Integration.NetFx.csproj
+++ b/tests/Microsoft.Identity.Test.Integration.netfx/Microsoft.Identity.Test.Integration.NetFx.csproj
@@ -5,6 +5,7 @@
     <IsPackable>false</IsPackable>
     <DefineConstants>$(DefineConstants);DESKTOP;NET_FX</DefineConstants>
     <Configurations>Debug;Release;Debug + MobileApps</Configurations>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
